# ha-overseerr

./: hacs.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
custom_components/overseerr/: manifest.json
